@@ -198,7 +198,7 @@ module Asciidoctor
 
         indent_section do
           toc_num_levels = (doc.attr 'toclevels', 2).to_i
-          if (insert_toc = (doc.attr? 'toc') && !((toc_placement = doc.attr 'toc-placement') == 'macro' || toc_placement == 'preamble') && doc.sections?)
+          if (insert_toc = (doc.attr? 'toc') && !((toc_placement = doc.attr 'toc-placement') == 'macro' || toc_placement == 'preamble') && !(get_entries_for_toc doc).empty?)
             start_new_page if @ppbook && verso_page?
             add_dest_for_block doc, id: 'toc', y: (at_page_top? ? page_height : nil)
             @toc_extent = allocate_toc doc, toc_num_levels, cursor, title_page_on
@@ -2352,7 +2352,7 @@ module Asciidoctor
         # NOTE: only allow document to have a single managed toc
         return if @toc_extent
         is_macro = (placement = opts[:placement] || 'macro') == 'macro'
-        if ((doc = node.document).attr? 'toc-placement', placement) && (doc.attr? 'toc') && doc.sections?
+        if ((doc = node.document).attr? 'toc-placement', placement) && (doc.attr? 'toc') && !(get_entries_for_toc doc).empty?
           start_toc_page node, placement if (is_book = doc.doctype == 'book')
           add_dest_for_block node, id: (node.id || 'toc') if is_macro
           toc_extent = @toc_extent = allocate_toc doc, (doc.attr 'toclevels', 2).to_i, cursor, (title_page_on = is_book || (doc.attr? 'title-page'))
